--- a/src/style/style.css
+++ b/src/style/style.css
@@ -23,14 +23,6 @@ ul {
   ul li {
     list-style-type: none; }
 
-.container {
-  display: flex;
-  display: -ms-flexbox;
-  flex-direction: column;
-  -ms-flex-direction: column;
-  justify-content: normal;
-  align-items: normal; }
-
 /*
 ====================================================================
             2. Header
@@ -45,40 +37,42 @@ h1 {
   align-items: normal;
   color: #B3E6A6; }
 
-.home-container {
+.home-container #bg-img {
+  min-height: 100%;
+  min-width: 1024px;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -9999; }
+
+.home-container:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: -webkit-linear-gradient(top left, #002f4b, #dc4225);
+  background-image: -o-linear-gradient(top left, #002f4b, #dc4225);
+  background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
+  opacity: .6;
+  z-index: -1; }
+
+.home-wrapper {
   display: flex;
   display: -ms-flexbox;
   flex-direction: column;
   -ms-flex-direction: column;
-  justify-content: normal;
-  align-items: normal; }
-  .home-container #bg-img {
-    min-height: 100%;
-    min-width: 1024px;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -9999; }
-  .home-container:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-image: -webkit-linear-gradient(top left, #002f4b, #dc4225);
-    background-image: -o-linear-gradient(top left, #002f4b, #dc4225);
-    background-image: linear-gradient(to bottom right, #002f4b, #dc4225);
-    opacity: .6;
-    z-index: -1; }
-  .home-container h1 {
-    font-size: 100px; }
-  .home-container span {
-    background-color: pink; }
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  height: 75%;
+  width: 100%; }
 
 .logo {
+  width: 100px;
   content: url("../assets/LOGO_WHITE.png"); }
 
 .movie-container .jumbotron {
@@ -97,42 +91,39 @@ h1 {
     .movie-container .jumbotron .info-wrapper .poster-image {
       width: 15vw; }
 
-.search-bar {
-  display: flex;
-  display: -ms-flexbox;
-  flex-direction: column;
-  -ms-flex-direction: column;
-  justify-content: baseline;
-  align-items: center; }
-  .search-bar input {
-    color: #666;
-    width: 50%;
-    font-size: 20px;
-    padding: 10px;
-    border: 2px solid #FFCCCC;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px; }
-    .search-bar input:focus {
-      outline: none;
-      box-shadow: 0 0 3pt 2pt #FFCCCC; }
-  .search-bar ::-webkit-input-placeholder {
-    /* Chrome/Opera/Safari */
-    color: #e6e6e6; }
-  .search-bar ::-moz-placeholder {
-    /* Firefox 19+ */
-    color: #e6e6e6; }
-  .search-bar :-ms-input-placeholder {
-    /* IE 10+ */
-    color: #e6e6e6; }
-  .search-bar :-moz-placeholder {
-    /* Firefox 18- */
-    color: #e6e6e6; }
+.search-bar input {
+  width: 650px;
+  color: #666;
+  font-size: 20px;
+  padding: 10px;
+  border: 2px solid #FFCCCC;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px; }
+  .search-bar input:focus {
+    outline: none;
+    box-shadow: 0 0 3pt 2pt #FFCCCC; }
+
+.search-bar ::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: #e6e6e6; }
+
+.search-bar ::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #e6e6e6; }
+
+.search-bar :-ms-input-placeholder {
+  /* IE 10+ */
+  color: #e6e6e6; }
+
+.search-bar :-moz-placeholder {
+  /* Firefox 18- */
+  color: #e6e6e6; }
 
 .search-results-list {
-  width: 50%;
+  width: 20%;
   border: 4px solid #FFCCCC;
-  position: relative;
+  position: absolute;
   border-radius: 25px;
   background-color: rgba(255, 255, 255, 0.9); }
   .search-results-list .results-item {
